--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,3 +41,5 @@ jobs:
           python-version: 3.8
       - name: Run pre-commit checks
         uses: pre-commit/action@v2.0.0
+        with:
+          PRE_COMMIT_USE_MICROMAMBA: 1
