--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ['setuptools', 'setuptools-scm', 'wheel']
 
 [project]
 name = "ivmodels"
-description = "Anchor Regression"
+description = "IV Models"
 readme = "README.md"
 version = "0.0.1"
 requires-python = ">=3.7"
