--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,10 @@ default_section = 'THIRDPARTY'
 
 [tool.setuptools]
 py-modules = ["ivmodels"]
+
+[tool.poetry.dependencies]
+sphinx = {version = "^3", optional = true}
+sphinx-autodoc-typehints ={version = "^1.11.1", optional = true}
+
+[tool.poetry.extras]
+docs = ["sphinx", "sphinx-autodoc-typehints"]
