--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -9,6 +9,8 @@ python:
   install:
   - method: pip
     path: .
+    extra_requirements:
+      - docs
 conda:
   environment: environment.yml
 formats:
