--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python"
 ]
 dependencies = [
-    "numpy", "scikit-learn"
+    "numpy", "scikit-learn", "glum", "scipy"
 ]
 
 [tool.isort]
