--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
   hooks:
   - id: flake8-conda
     additional_dependencies: [-c, conda-forge, flake8-docstrings=1.5.0, flake8-rst-docstrings=0.0.14]
-    args: ["--ignore=E203,E266,E501,W503,C901,D104,D100,D301"]
+    args: ["--ignore=E203,E266,E501,W503,C901,D104,D100,D301,W604"]
 - repo: https://github.com/Quantco/pre-commit-mirrors-mypy
   rev: "0.982"
   hooks:
