Add codecov action.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,14 @@ jobs:
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
       - name: Pytest
-        run: pytest tests
+        run: pytest --cov --cov-report xml tests
+      - name: codecov
+        uses: codecov/codecov-action@v4.3.1
+        with:
+          file: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          name: pytest-python${{ matrix.PYTHON_VERSION }}
+
 
   pre-commit-checks:
       name: "Linux - pre-commit checks - Python 3.10"
