--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - numpy
   - scipy
   - pytest  # tests only
+  - pytest-cov  # tests only
   - linearmodels  # tests only
   - scikit-learn
   - glum
