--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,3 +55,28 @@ jobs:
             python-version: "3.10"
         - name: Run pre-commit checks
           uses: pre-commit/action@v3.0.0
+
+  asv-benchmarks:
+    name: ASV benchmarks
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Conda env
+        uses: mamba-org/provision-with-micromamba@e2b397b12d0a38069451664382b769c9456e3d6d
+        with:
+          cache-env: true
+          extra-specs: |
+            python=3.10
+            asv
+      - name: Install repository
+        run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+      - name: Run ASV benchmarks
+        run: |
+          cd benchmarks
+          asv machine --machine github-runner
+          export OPENBLAS_NUM_THREADS=1
+          time asv --config asv.conf.json run -m github-runner --quick --python=same --bench
+          asv --config asv.conf.json publish
+      - store_artifacts:
+        path: benchmarks/html
+        destination: html-benchmarks
