--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,30 +37,32 @@ jobs:
 
 
   pre-commit-checks:
-      name: "Linux - pre-commit checks - Python 3.10"
-      timeout-minutes: 30
-      runs-on: ubuntu-latest
-      env:
-        PRE_COMMIT_USE_MICROMAMBA: 1
-      steps:
-        - name: Checkout branch
-          uses: actions/checkout@v3.5.2
-        - name: Set up micromamba
-          uses: mamba-org/setup-micromamba@d05808540d968a55ca33c798e0661fb98f533c73
-        - name: Add micromamba to GITHUB_PATH
-          run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
-        - name: Install Python 3.10
-          uses: actions/setup-python@v4
-          with:
-            python-version: "3.10"
-        - name: Run pre-commit checks
-          uses: pre-commit/action@v3.0.0
+    name: "Linux - pre-commit checks - Python 3.10"
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+    env:
+      PRE_COMMIT_USE_MICROMAMBA: 1
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v3.5.2
+      - name: Set up micromamba
+        uses: mamba-org/setup-micromamba@d05808540d968a55ca33c798e0661fb98f533c73
+      - name: Add micromamba to GITHUB_PATH
+        run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
+      - name: Install Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Run pre-commit checks
+        uses: pre-commit/action@v3.0.0
 
   asv-benchmarks:
     name: ASV benchmarks
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout branch
+        uses: actions/checkout@v3
+
       - name: Set up Conda env
         uses: mamba-org/provision-with-micromamba@e2b397b12d0a38069451664382b769c9456e3d6d
         with:
@@ -68,8 +70,10 @@ jobs:
           extra-specs: |
             python=3.10
             asv
+
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+
       - name: Run ASV benchmarks
         run: |
           cd benchmarks
@@ -77,6 +81,9 @@ jobs:
           export OPENBLAS_NUM_THREADS=1
           time asv --config asv.conf.json run -m github-runner --quick --python=same --bench
           asv --config asv.conf.json publish
-      - store_artifacts:
-        path: benchmarks/html
-        destination: html-benchmarks
+
+      - name: Upload ASV results
+        uses: actions/upload-artifact@v4
+        with:
+          name: asv-results
+          path: html
