--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,6 +59,12 @@ jobs:
   asv-benchmarks:
     name: ASV benchmarks
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        # see https://github.com/conda-incubator/setup-miniconda/#important
+        shell: bash -l {0}
+
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
