--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,7 +88,7 @@ jobs:
           cd benchmarks
           asv machine --machine github-runner
           export OPENBLAS_NUM_THREADS=1
-          time asv --config asv.conf.json run -m github-runner --quick --python=same --bench
+          time asv --config asv.conf.json run -m github-runner --quick --python=same
           asv --config asv.conf.json publish
 
       - name: Upload ASV results
