--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,6 +69,9 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v3
 
+      - name: Fetch master
+        run: git fetch origin main --depth 1
+
       - name: Set up Conda env
         uses: mamba-org/provision-with-micromamba@e2b397b12d0a38069451664382b769c9456e3d6d
         with:
