--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,7 +69,7 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v3
 
-      - name: Fetch master
+      - name: Fetch main
         run: git fetch origin main --depth 1
 
       - name: Set up Conda env
@@ -91,7 +91,7 @@ jobs:
           cd benchmarks
           asv machine --machine github-runner
           export OPENBLAS_NUM_THREADS=1
-          time asv --config asv.conf.json run -m github-runner --quick --python=same
+          asv --config asv.conf.json run -m github-runner --quick --python=same
           asv --config asv.conf.json publish
 
       - name: Upload ASV results
