--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,18 +89,18 @@ jobs:
       # - name: Run ASV benchmarks
       #   run: |
       #     cd benchmarks
-      #     asv machine --machine github-runner
+      #     asv machine --machine github-runner --yes
       #     export OPENBLAS_NUM_THREADS=1
       #     asv --config asv.conf.json run -m github-runner --quick --python=same
       #     asv --config asv.conf.json publish
 
-      - name: Upload ASV results
-        uses: actions/upload-artifact@v4
-        with:
-          name: asv-results
-          path: html
+      # - name: Upload ASV results
+      #   uses: actions/upload-artifact@v4
+        # with:
+        #   name: asv-results
+        #   path: html
 
       - name: asv continuous
         run: |
           cd benchmarks
-          asv continous origin/main HEAD -e --factor 1.2 --machine github-runner --python same --config asv.conf.json
+          asv continuous origin/main HEAD -e --factor 1.2 --machine github-runner --python same --config asv.conf.json
