--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,15 +73,12 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Set up Conda env
-        uses: mamba-org/provision-with-micromamba@e2b397b12d0a38069451664382b769c9456e3d6d
+        uses: mamba-org/setup-micromamba@v1
+        environment-file: environment.yml
+        cache-environment: true
         with:
-          cache-env: true
-          extra-specs: |
-            python=3.10
-            asv
-
-      - name: Add micromamba to GITHUB_PATH
-        run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
+          init-shell: bash -l {0}
+          create-args: python=3.10 asv
 
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
