--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,6 +80,9 @@ jobs:
           init-shell: bash
           create-args: python=3.10 asv
 
+      - name: force mamba reinstall
+        run: mamba install -n base libarchive -c main --force-reinstall --solver classic
+
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
 
