--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,4 +104,4 @@ jobs:
         run: |
           cd benchmarks
           asv machine --machine github-runner --yes
-          asv continuous origin/main HEAD -e --factor 1.2 --machine github-runner --python same --config asv.conf.json
+          asv continuous origin/main HEAD --factor 1.2 --machine github-runner --python same --config asv.conf.json
