--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,6 +80,9 @@ jobs:
           init-shell: bash
           create-args: python=3.10 asv
 
+      - name: Add micromamba to GITHUB_PATH
+        run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
+
       - name: force mamba reinstall
         run: mamba install -n base libarchive -c main --force-reinstall --solver classic
 
