--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,11 +80,11 @@ jobs:
           init-shell: bash
           create-args: python=3.10 asv
 
-      - name: Add micromamba to GITHUB_PATH
-        run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
+      # - name: Add micromamba to GITHUB_PATH
+      #   run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
 
-      - name: force mamba reinstall
-        run: mamba install -n base libarchive -c main --force-reinstall --solver classic
+      # - name: force mamba reinstall
+      #   run: mamba install -n base libarchive -c main --force-reinstall --solver classic
 
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
