--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,19 +80,18 @@ jobs:
           init-shell: bash
           create-args: python=3.10 asv
 
-      - name: Add micromamba to GITHUB_PATH
-        run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
+      # - name: Add micromamba to GITHUB_PATH
+      #   run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
 
-      # https://stackoverflow.com/questions/77617946/solve-conda-libmamba-solver-libarchive-so-19-error-after-updating-conda-to-23
-      - name: force mamba reinstall
-        run: conda install -n base libarchive -c main --force-reinstall --solver classic -y
+      # # https://stackoverflow.com/questions/77617946/solve-conda-libmamba-solver-libarchive-so-19-error-after-updating-conda-to-23
+      # - name: force mamba reinstall
+      #   run: conda install -n base libarchive -c main --force-reinstall --solver classic -y
 
-      - name: Install repository
-        run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+      # - name: Install repository
+      #   run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
 
       - name: Run ASV benchmarks
         run: |
-          cd benchmarks
           asv machine --machine github-runner --yes
           export OPENBLAS_NUM_THREADS=1
           asv --config asv.conf.json run -m github-runner --quick --python=same
