--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,8 +87,8 @@ jobs:
       # - name: force mamba reinstall
       #   run: conda install -n base libarchive -c main --force-reinstall --solver classic -y
 
-      # - name: Install repository
-      #   run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+      - name: Install repository
+        run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
 
       - name: Run ASV benchmarks
         run: |
