--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,14 +72,14 @@ jobs:
       - name: Fetch git history
         run: git fetch --prune --unshallow
 
-      - name: Set up Conda env
-        uses: mamba-org/setup-micromamba@v1
-        with:
-          micromamba-version: '1.5.6-0'
-          environment-file: environment.yml
-          cache-environment: true
-          init-shell: bash
-          create-args: python=3.10 asv
+      # - name: Set up Conda env
+      #   uses: mamba-org/setup-micromamba@v1
+      #   with:
+      #     micromamba-version: '1.5.6-0'
+      #     environment-file: environment.yml
+      #     cache-environment: true
+      #     init-shell: bash
+      #     create-args: python=3.10 asv
 
       # - name: Add micromamba to GITHUB_PATH
       #   run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
@@ -88,21 +88,21 @@ jobs:
       # - name: force mamba reinstall
       #   run: conda install -n base libarchive -c main --force-reinstall --solver classic -y
 
-      - name: Install repository
-        run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+      # - name: Install repository
+      #   run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
 
-      - name: Run ASV benchmarks
-        run: |
-          asv machine --machine github-runner --yes
-          export OPENBLAS_NUM_THREADS=1
-          asv --config asv.conf.json run -m github-runner --quick --python=same
-          asv --config asv.conf.json publish
+      # - name: Run ASV benchmarks
+      #   run: |
+      #     asv machine --machine github-runner --yes
+      #     export OPENBLAS_NUM_THREADS=1
+      #     asv --config asv.conf.json run -m github-runner --quick --python=same
+      #     asv --config asv.conf.json publish
 
-      - name: Upload ASV results
-        uses: actions/upload-artifact@v4
-        with:
-          name: asv-results
-          path: html
+      # - name: Upload ASV results
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: asv-results
+      #     path: html
 
       - name: asv continuous
         run: |
