--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,14 +72,17 @@ jobs:
       - name: Fetch git history
         run: git fetch --prune --unshallow
 
-      # - name: Set up Conda env
-      #   uses: mamba-org/setup-micromamba@v1
-      #   with:
-      #     micromamba-version: '1.5.6-0'
-      #     environment-file: environment.yml
-      #     cache-environment: true
-      #     init-shell: bash
-      #     create-args: python=3.10 asv
+      - name: Set up Conda env
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          micromamba-version: '1.5.6-0'
+          environment-file: environment.yml
+          cache-environment: true
+          init-shell: bash
+          create-args: python=3.10 asv
+
+      - name: Downgrade conda
+        run: conda install -n base conda=conda install conda=23 -y
 
       # - name: Add micromamba to GITHUB_PATH
       #   run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
