--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,4 +110,4 @@ jobs:
       - name: asv continuous
         run: |
           asv machine --machine github-runner --yes
-          asv continuous origin/main HEAD --factor 1.2 --machine github-runner --config asv.conf.json
+          asv continuous origin/main HEAD --factor 1.2 --machine github-runner --config asv.conf.json -v
