--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ default_section = 'THIRDPARTY'
 [tool.setuptools]
 py-modules = ["ivmodels"]
 
+[tool.setuptools.packages.find]
+include = ["ivmodels.*"]
+
 [tool.poetry.dependencies]
 sphinx = {version = "^3", optional = true}
 sphinx-autodoc-typehints ={version = "^1.11.1", optional = true}
