--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ['setuptools', 'setuptools-scm', 'wheel']
 name = "ivmodels"
 description = "IV Models"
 readme = "README.md"
-version = "0.1.0"
+version = "0.2.0"
 requires-python = ">=3.7"
 authors = [
     { name = "Malte Londschien", email = "malte@londschien.ch" },
@@ -30,6 +30,9 @@ default_section = 'THIRDPARTY'
 
 [tool.setuptools]
 py-modules = ["ivmodels"]
+
+[tool.setuptools.packages.find]
+include = ["ivmodels.*"]
 
 [tool.poetry.dependencies]
 sphinx = {version = "^3", optional = true}
