--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,31 +4,9 @@ on:
     types:
       - published
 
-name: Build
+name: release
 
 jobs:
-  python-build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        name: Install Python
-        with:
-          python-version: '3.10'
-
-      - name: Install build dependencies
-        run: python -m pip install build
-
-      - name: Build source distribution and wheel
-        run: python -m build --sdist --wheel
-
-      - uses: actions/upload-artifact@v3
-        with:
-          name: wheels
-          path: dist/*
-
   upload-testpypi:
     needs: [python-build]
     runs-on: ubuntu-latest
