--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,33 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
 
+  python-build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
+        name: Install Python
+        with:
+          python-version: '3.10'
+
+      - name: Install build dependencies
+        run: python -m pip install build
+
+      - name: Build source distribution and wheel
+        run: python -m build --sdist --wheel
+
+      - name: Install wheel
+        run: python -m pip install dist/*.whl
+
+      - name: Test import
+        run: python -c "from ivmodels import KClass"
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: dist/*
 
   upload-pypi:
     needs: [python-build, upload-testpypi]
