--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
         run: python -m pip install dist/*.whl
 
       - name: Test import
-        run: python -c "from ivmodels import KClass"
+        run: cd .. && python -c "from ivmodels import KClass"
 
       - uses: actions/upload-artifact@v3
         with:
