--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,9 +4,10 @@ on:
     types:
       - published
 
-name: Build
+name: release
 
 jobs:
+
   python-build:
     runs-on: ubuntu-latest
 
@@ -23,6 +24,12 @@ jobs:
 
       - name: Build source distribution and wheel
         run: python -m build --sdist --wheel
+
+      - name: Install wheel
+        run: python -m pip install dist/*.whl
+
+      - name: Test import
+        run: cd .. && python -c "from ivmodels import KClass;import ivmodels.tests;from ivmodels.quadric import Quadric"
 
       - uses: actions/upload-artifact@v3
         with:
@@ -48,7 +55,6 @@ jobs:
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
-
 
   upload-pypi:
     needs: [python-build, upload-testpypi]
