--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - linearmodels  # tests only
   - scikit-learn
   - glum
+  - numba
   - pandas  # optional
   - sphinx  # docs
   - sphinxcontrib-apidoc  # docs
