--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -12,6 +12,6 @@ python:
     extra_requirements:
       - docs
 conda:
-  environment: environment.yml
+  environment: docs/environment.yml
 formats:
 - pdf
