Implement more powerful CLR critical values (#144)
* More powerful clr

* Rename to lambdas

* Implement more powerful clr critical values

* Add bib entry.

* Potential speedup

* Add numba dependency.

* Add numba dep to pyproject.toml

* Try older sklearn.

* Use numerical approx. if mx+md=1

* Different env.yaml for docs

* Changelog.

* Changelog.

--- a/environment.yml
+++ b/environment.yml
@@ -11,12 +11,5 @@ dependencies:
   - linearmodels  # tests only
   - scikit-learn
   - glum
+  - numba
   - pandas  # optional
-  - sphinx  # docs
-  - sphinxcontrib-apidoc  # docs
-  - ipython  # docs
-  - sphinx_rtd_theme  # docs
-  - sphinxcontrib-bibtex  # docs
-  - pip  # docs
-  - nbclassic  # docs
-  - nbsphinx  # docs
